--- a/package.json
+++ b/package.json
@@ -16,21 +16,28 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.0.2",
+    "@react-three/drei": "^9.105.4",
+    "@react-three/fiber": "^8.16.2",
     "expo": "~50.0.14",
     "expo-font": "~11.10.3",
+    "expo-gl": "^13.6.0",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
+    "expo-three": "^7.0.0",
     "expo-web-browser": "~12.8.2",
     "firebase": "^10.11.0",
+    "r3f-native-orbitcontrols": "^1.0.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "three": "^0.164.0",
+    "three-stdlib": "^2.29.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
