--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
     "three": "^0.164.0",
     "three-stdlib": "^2.29.6"
