--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
-  "jest": {
-    "preset": "jest-expo"
-  },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
@@ -50,6 +47,7 @@
     "@types/react-native": "^0.73.0",
     "jest": "^29.7.0",
     "jest-expo": "~50.0.4",
+    "react-native-svg-transformer": "^1.3.0",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
